# BigMoeOnEdge

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cli/: main.cpp
core/: CMakeLists.txt
core/include/bmoe/: cache_governor.h  config.h  decode_trace.h  expert_source.h  metrics.h  recipe.h  route_trace.h  runtime.h  session.h
core/src/: config.cpp
core/src/engine/: chat_parse.cpp  chat_parse.h  runtime.cpp  session.cpp  thinking_control.cpp
core/src/io/: file_reader.cpp  file_reader.h  platform_io.cpp  platform_io.h
core/src/metrics/: csv_metrics_sink.cpp  decode_trace_sink.cpp  route_trace_sink.cpp
core/src/moe/: arch_registry.cpp  cache_governor.cpp  dense_weights.cpp  dense_weights.h  expert_stream_source.cpp  expert_stream_source.h  router_hook.cpp  router_hook.h
docs/: README.md  adaptive-cache.md  android-memory.md  architecture.md  benchmark-method.md  benchmarks-gpt-oss.md  benchmarks.md  expert-dropping.md  limitations.md  moe-streaming.md  prefetch.md  pressure.md  roadmap.md  seam.md  session.md  telemetry.md  warmup-analysis.md
docs/bench-data/2026-07-14/: gptoss-matrix.out  gptoss_mmap_k2.csv  gptoss_mmap_k4.csv
docs/bench-data/2026-07-14-warmup/: README.md  baseline_gptoss_k4.csv  reserve_gemma_k8.csv  warmup_gemma_k8.csv  warmup_gptoss_k4.csv  warmup_qwen_k8.csv
docs/bench-data/2026-07-14/warmup/: gemma_k6.csv  gemma_k8.csv  gptoss_k2.csv  qwen_k6.csv  qwen_k8.csv
docs/bench-data/2026-07-15-route-trace/: findings.md
docs/bench-data/2026-07-20-sidecar/: c2-a1.csv  c2-a2.csv  c2-b1.csv  c2-b2.csv  cell-a1.csv  cell-a2.csv  cell-b1.csv  cell-b2.csv  findings.md  qw-a1.csv  qw-a2.csv  qw-b1.csv  qw-b2.csv
docs/bench-data/2026-07-21-pinned-memory/: findings.md
docs/bench-data/2026-07-22-drop-cold-experts/: bmoe-20260722-134209.csv  bmoe-20260722-135113.csv  bmoe-20260722-140454.csv  bmoe-20260722-142300.csv  findings.md
docs/bench-data/2026-07-22-drop-quality/: answers.csv  findings.md  grade.py  key.json  prompts.jsonl  run.sh
examples/android/: README.md  settings.gradle
examples/android/app/: build.gradle
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/java/io/bigmoeonedge/example/: AppSettings.kt  ChatMl.kt  Components.kt  GgufHeader.kt  MainActivity.kt  MetricFields.kt  MetricsCsv.kt  MetricsScreen.kt  ModelCatalog.kt  ModelDownloader.kt  ModelManager.kt  Params.kt  RunBus.kt  RunService.kt  SafImport.kt  SettingsScreen.kt  Telemetry.kt
examples/android/app/src/main/jniLibs/arm64-v8a/: README.md
examples/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
examples/android/app/src/main/res/layout/: activity_main.xml
examples/android/app/src/main/res/values/: strings.xml  themes.xml
examples/android/app/src/main/res/xml/: file_paths.xml
scripts/: bench-analyze.py  bench-matrix-rework.ps1  bench-matrix.ps1  bench-prefetch.ps1  bench-run.sh  bench-warmonly.sh  build-android.ps1  decode-analyze.py  gptoss-matrix.sh  gptoss-mmap.sh  route-analyze.py  route-drop-replay.py  route-replay.py  route-viewer.py
tests/: CMakeLists.txt  cache_governor_test.cpp  chat_parse_test.cpp  config_test.cpp  moe_gates.cpp  think_control_test.cpp
tools/: CMakeLists.txt  iobench.cpp  membench.cpp
